# Origination-Model

./: MLproject  dae.ipynb  docker-compose.yml  pyproject.toml
docs/business_understanding/: project_charter.md
docs/data/: data_definition.md  data_dictionary.md  data_summary.md
docs/deployment/: deploymentdoc.md
docs/infrastructure/: infrastructure_docs.md
docs/modeling/: baseline_models.md  model_report.md
scripts/: Dockerfile
scripts/data_acquisition/: Data_adquisition.ipynb
