[tool.poetry]
name = "Modelo Originación"
version = "0.1.0"
description = "Modelo de Originación de Créditos"
authors = ["César Sossa <analistaplaneacion@cooprofesoresun.coop>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pendulum = "^2.1.2"
fastapi = "^0.88.0"
scikit-learn = "^1.2.0"
numpy = "^1.23.5"
pydantic = "^1.10.2"
uvicorn = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
